alignmet fixes

--- a/customStyle.css
+++ b/customStyle.css
@@ -1876,7 +1876,7 @@ responsive
             #contactForm {
             position: absolute;
             top: 50% !important;
-            left: 40%;
+            left: 37%;
             width: 300px;
             height: auto;
             background-color: #4c3979;
